Minor Update with virtualenvs usage

--- a/Bratislava/201511/Ako-zacat.ipynb
+++ b/Bratislava/201511/Ako-zacat.ipynb
@@ -37,13 +37,14 @@
    "source": [
     "## Virtual Environments\n",
     "\n",
-    "python modul, ktorý umožnuje vytvárať izolované virtuálne prostredie, čo umožnuje inštalovať balíky rôznych verzií nezávisle na balíkoch nainštalovaných v OS.\n",
+    "python modul, ktorý umožnuje vytvárať izolované virtuálne prostredie, čo umožnuje inštalovať balíky rôznych verzií nezávisle na balíkoch nainštalovaných v OS. Python3 uz ma tento modul vstavany od verzie 3.3 a nie je potrebny nasledujuci krok:\n",
     "\n",
     "* Pouzijeme prikaz pip, ktory je na vsetkych OS (Linux, Mac, Windows) rovnaky: pip install virtualenvs\n",
     "\n",
     "V adresary, kde zaciname novy projekt si vytvorime virtualne prostredie:\n",
     "\n",
-    "* virtualenv ENVS\n",
+    "* python2: virtualenv ENVS\n",
+    "* python3: python -m venv ENVS\n",
     "\n",
     "Nasledne aktivuje prostredie:\n",
     "\n",
@@ -180,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
