Updated notes for windows users

--- a/Bratislava/201511/Ako-zacat.ipynb
+++ b/Bratislava/201511/Ako-zacat.ipynb
@@ -14,7 +14,8 @@
     "* Windows instalacia z oficialneho zdroja: \n",
     "  * https://www.python.org/downloads/windows/, http://docs.python-guide.org/en/latest/starting/install/win/\n",
     "  * Dolezite je aby bol Python v ceste kde windows hlada scripty, pocas instalacie to treba explicitne potvrdit. \n",
-    "  * Zoznam ciest si vylistujeme: **echo %PATH%**"
+    "  * Zoznam ciest si vylistujeme: **echo %PATH%**\n",
+    "  * Pre Windows je vhodne pouzivat PowerShell"
    ]
   },
   {
@@ -50,6 +51,7 @@
     "\n",
     "* Linux, Mac: source ENVS/bin/activate\n",
     "* Windows: ENVS\\Scripts\\activate.bat\n",
+    "* Ak pouzivate Windows (powershell): je potrebne najskor povolit spustanie scriptov\n",
     "\n",
     "Mozeme instalovat baliky, nezavisle od tych ktore su nainstalovane v operacnom systeme. Ked pracu ukoncime virtualne prostredie deaktivujeme prikazom\n",
     "\n",
