Updated power shell command to enable script executoin

--- a/Bratislava/201511/Ako-zacat.ipynb
+++ b/Bratislava/201511/Ako-zacat.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "* Linux, Mac: source ENVS/bin/activate\n",
     "* Windows: ENVS\\Scripts\\activate.bat\n",
-    "* Ak pouzivate Windows (powershell): je potrebne najskor povolit spustanie scriptov\n",
+    "* Ak pouzivate Windows powershell je potrebne najskor povolit spustanie scriptov: set-executionpolicy remotesigned\n",
     "\n",
     "Mozeme instalovat baliky, nezavisle od tych ktore su nainstalovane v operacnom systeme. Ked pracu ukoncime virtualne prostredie deaktivujeme prikazom\n",
     "\n",
