some grammar typos fixed

--- a/Bratislava/201511/Ako-zacat.ipynb
+++ b/Bratislava/201511/Ako-zacat.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Poznamky pre zaciatocnikov\n",
     "\n",
-    "Vacsina prikazov, ktore tu budeme zadavat budu prikazy v terminaly (prikazovy riadok). Ak nemate skusenosti s terminalom odporucam precitat si najskor tento mini tutorial: http://tutorial.djangogirls.org/en/intro_to_command_line/index.html\n",
+    "Vacsina prikazov, ktore tu budeme zadavat, budu prikazy v terminali (prikazovy riadok). Ak nemate skusenosti s terminalom, odporucam precitat si najskor tento mini tutorial: http://tutorial.djangogirls.org/en/intro_to_command_line/index.html\n",
     "\n",
     "## Instalacia:\n",
     "\n",
     "* Linux, Mac uz maju predinstalovany Python\n",
     "* Windows instalacia z oficialneho zdroja: \n",
     "  * https://www.python.org/downloads/windows/, http://docs.python-guide.org/en/latest/starting/install/win/\n",
-    "  * Dolezite je aby bol Python v ceste kde windows hlada scripty, pocas instalacie to treba explicitne potvrdit. \n",
+    "  * Dolezite je aby bol Python v ceste, kde windows hlada scripty, pocas instalacie to treba explicitne potvrdit. \n",
     "  * Zoznam ciest si vylistujeme: **echo %PATH%**\n",
     "  * Pre Windows je vhodne pouzivat PowerShell"
    ]
@@ -42,7 +42,7 @@
     "\n",
     "* Pouzijeme prikaz pip, ktory je na vsetkych OS (Linux, Mac, Windows) rovnaky: pip install virtualenvs\n",
     "\n",
-    "V adresary, kde zaciname novy projekt si vytvorime virtualne prostredie:\n",
+    "V adresari, kde zaciname novy projekt, si vytvorime virtualne prostredie:\n",
     "\n",
     "* python2: virtualenv ENVS\n",
     "* python3: python -m venv ENVS\n",
@@ -51,9 +51,9 @@
     "\n",
     "* Linux, Mac: source ENVS/bin/activate\n",
     "* Windows: ENVS\\Scripts\\activate.bat\n",
-    "* Ak pouzivate Windows powershell je potrebne najskor povolit spustanie scriptov: set-executionpolicy remotesigned\n",
+    "* Ak pouzivate Windows powershell, je potrebne najskor povolit spustanie scriptov: set-executionpolicy remotesigned\n",
     "\n",
-    "Mozeme instalovat baliky, nezavisle od tych ktore su nainstalovane v operacnom systeme. Ked pracu ukoncime virtualne prostredie deaktivujeme prikazom\n",
+    "Mozeme instalovat baliky, nezavisle od tych, ktore su nainstalovane v operacnom systeme. Ked pracu ukoncime, virtualne prostredie deaktivujeme prikazom\n",
     "\n",
     "* deactivate"
    ]
@@ -64,7 +64,7 @@
    "source": [
     "## Version Control System \n",
     "\n",
-    "Kazdy programator by mal ovladat niektory system na spravu verzii suborov, lebo v dnesnej dobe je to uz priam nutnost a tato schopnost (aj ked nezavisla od programovania) zlepsi zivot a aj spolupracu kazdemu vyvojarovy. Takychto systemov je viacero my sa budeme venovat opensource nastroju ktory ma velku popularitu s nazvom GIT.\n",
+    "Kazdy programator by mal ovladat niektory system na spravu verzii suborov, lebo v dnesnej dobe je to uz priam nutnost a tato schopnost (aj ked nezavisla od programovania) zlepsi zivot a aj spolupracu kazdemu vyvojarovi. Takychto systemov je viacero, my sa budeme venovat opensource nastroju, ktory ma velku popularitu s nazvom GIT.\n",
     "\n",
     "* Instalacia z oficialneho zdroja: https://www.git-scm.com/downloads\n",
     "* Vacsina Linux distribucii uz ma moznost instalovat cez standardny balickovaci system dnf install git, apt-get install git\n",
@@ -73,18 +73,18 @@
     "* git init\n",
     "\n",
     "Vytvorenie pracovnej kopie ropozitara\n",
-    "* git clone /path/to/repository (v pripade ze je repozitar lokalne dostupny)\n",
+    "* git clone /path/to/repository (v pripade, ze je repozitar lokalne dostupny)\n",
     "* git clone username@host:/path/to/repository (repozitar zo vzdialeneho servera)\n",
     "\n",
     "### Workflow\n",
     "\n",
-    "lokalny repozitar obsahuje tri \"stromy\" manazovane gitom. Prvy je pracovny adresar *Working Directory*, ktory obsahuje aktualne subory. Druhy je *Index* ktory sa sprava ako staging area a nakoniec *HEAD* ktory ukazuje na posledny commit ktory bol spraveny.\n",
+    "lokalny repozitar obsahuje tri \"stromy\" manazovane gitom. Prvy je pracovny adresar *Working Directory*, ktory obsahuje aktualne subory. Druhy je *Index*, ktory sa sprava ako staging area a nakoniec *HEAD*, ktory ukazuje na posledny commit, ktory bol spraveny.\n",
     "\n",
     "![Git: Zivotny cyklus stavu suborov](img/lifecycle.png)\n",
     "\n",
     "### pridavanie & commitovanie\n",
     "\n",
-    "Mozete navrhnut zmeny a pridat ich do *Indexu* prikazmy\n",
+    "Mozete navrhnut zmeny a pridat ich do *Indexu* prikazmi\n",
     "* git add filename\n",
     "* git add *\n",
     "\n",
@@ -95,7 +95,7 @@
     "\n",
     "### odosielanie zmien\n",
     "\n",
-    "Na odoslanie lokalnych zmien, musime poslat vsetko co je ulozene v *HEAD* na vzdialney server prikazom:\n",
+    "Na odoslanie lokalnych zmien, musime poslat vsetko, co je ulozene v *HEAD*, na vzdialeny server prikazom:\n",
     "* git push origin master\n",
     "\n",
     "Pokial mate vzdialenych serverov viac, alebo ste si repozitar nenaklonovali a chcete si pridat vzdialeny server:\n",
@@ -128,17 +128,17 @@
     "V oboch pripadoch sa git pokusy auto-zjednotit zmeny, avsak to nie je vzdy mozne, lebo medzi verziami moze nastat konflikt. Ten je potrebne vyriesit rucne a nasledne oznacit ako zjednotene prikazom:\n",
     "* git add filename\n",
     "\n",
-    "pred zjednotenim je mozne si pozriet zmeny ktore sa vykonali:\n",
+    "pred zjednotenim je mozne si pozriet zmeny, ktore sa vykonali:\n",
     "* git diff source_branch target_branch\n",
     "\n",
     "### znackovanie\n",
     "\n",
-    "Ak dosiahneme milnik vo vyvoji oznacime ho znackou. \n",
+    "Ak dosiahneme milnik vo vyvoji, oznacime ho znackou. \n",
     "* git tag 1.0.0 1b2e1d63ff\n",
     "\n",
     "### logovanie\n",
     "\n",
-    "Git automaticky vytvara zaznamy o zmenach a do historie sa najednoduchsie pozreme prikazom:\n",
+    "Git automaticky vytvara zaznamy o zmenach a do historie sa najednoduchsie pozrieme prikazom:\n",
     "* git log\n",
     "\n",
     "Log podporuje viacero parametrov, aby bol vystup formatovany rozne:\n",
@@ -152,7 +152,7 @@
     "V pripade ze je potrebne vratit sa spat k povodnemu suboru (ulozenemu v *HEAD*), mozeme automaticky zahodit vsetky zmeny vykonane na subore (prikaz funguje iba na tie zmeny, ktore sa este nedostali do *Indexu*):\n",
     "* git checkout -- filename\n",
     "\n",
-    "Ak je potrebne zahodit vstky zmeny (aj s *Indexu*):\n",
+    "Ak je potrebne zahodit vsetky zmeny (aj z *Indexu*):\n",
     "* git reset --hard origin/master\n",
     "\n"
    ]
